# pe-vm

./: .gitignore  Cargo.toml  README.md  settings.yml
examples/: hello_world.rs
src/: api.rs  ext.rs  lib.rs  settings.rs
src/architecture/: mod.rs
src/architecture/intel/: mod.rs
src/architecture/intel/x86/: mod.rs
src/ext/: args.rs  com.rs  error.rs  handles.rs  mod.rs  pe.rs  vm.rs
src/ext/pe/: execute.rs  handle.rs  mod.rs  resource.rs
src/pe/: error.rs  image.rs  io.rs  mod.rs  parse.rs  types.rs
src/pe/parse/: clr.rs  debug.rs  exports.rs  headers.rs  helpers.rs  iat.rs  imports.rs  load_config.rs  mod.rs  raw.rs  reloc.rs  resource.rs  security.rs  tls.rs
src/pe/types/: clr.rs  debug.rs  headers.rs  import.rs  load_config.rs  mod.rs  reloc.rs  resource.rs  security.rs  tls.rs
src/vm/: config.rs  core.rs  error.rs  host.rs  mod.rs  registers.rs  state.rs  types.rs
src/vm/core/: com.rs  env.rs  exec.rs  file.rs  heap.rs  imports.rs  init.rs  memory.rs  mod.rs  paths.rs  registers.rs  registry.rs  state.rs  tls.rs
src/vm/windows/: guid.rs  macros.rs  mod.rs
src/vm/windows/advapi32/: mod.rs  registry.rs
src/vm/windows/com/: args.rs  dispatch.rs  mod.rs  object.rs
src/vm/windows/comdlg32/: mod.rs
src/vm/windows/core/: atl.rs  com.rs  env.rs  exec.rs  file.rs  heap.rs  imports.rs  init.rs  (+8 more)
tests/: com.rs  hello_printf.rs  hello_world_dll.rs  imports_strict.rs  oleaut32_typelib.rs  path_mapping.rs  pe_directories.rs  registry.rs  registry_wow6432.rs  sandbox.rs  settings_resolution.rs  ws2_32.rs  x86_instructions.rs
tests/common/: mod.rs
(+254 files in other folders)
