[package]
name = "pe_vm"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Minimal PE/DLL loader with a tiny VM for learning"

[lib]
name = "pe_vm"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
encoding_rs = "0.8"
font8x8 = "0.3"
fontdue = "0.8"
native-tls = "0.2"
sdl2 = { version = "0.36", features = ["bundled"], optional = true }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"

[features]
default = ["sdl2"]
sdl2 = ["dep:sdl2"]
